# tiny-rpc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  client.cpp
include/: message.hpp  rpcclient.hpp  rpcserver.hpp
server/: CMakeLists.txt  server.cpp
src/: main.cpp
test/: CMakeLists.txt  test.cpp
